# parsepg

./: .gitignore  CMakeLists.txt  _build.py  localhost.session.sql  pyproject.toml  testing.md
include/: ppgbin.h
py_parse_pg_bin/: contracts.py  parse.py  ppgbin.pyi  pyppgbin.py
src/: ppgbin.cpp  tester.cpp
tests/: test_parse.py
tests/scripts/: datatypes.sql  datetime.sql  numerics.sql  strings.sql
