[tool.poetry]
name = "py-parse-pg-bin"
version = "0.1.0"
description = ""
authors = ["Emanuel Kedmi <emanuel.kedmi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.build]
script = "_build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"


[tool.poetry.group.dev.dependencies]
tox = "^4.21.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
